--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
           -webkit-tap-highlight-color: transparent;
         }
       }
+
+      /* Fade in animation */
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(-10px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.3s ease-out;
+      }
     </style>
     <script type="importmap">
       {
