--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MixiRide</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: "class",
+        theme: {
+          extend: {},
+        },
+      };
+    </script>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -71,7 +79,9 @@
     </script>
     <link rel="stylesheet" href="/index.css" />
   </head>
-  <body class="bg-gray-50 text-slate-900 font-sans antialiased">
+  <body
+    class="bg-gray-50 dark:bg-gray-900 text-slate-900 dark:text-white font-sans antialiased transition-colors duration-300"
+  >
     <div id="root"></div>
     <script type="module" src="/index.jsx"></script>
   </body>
